--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon api.js"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/kisdtapaswini/NodeJs#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "mongoose": "^8.2.3",
     "short-uuid": "^4.2.2"
   },
   "devDependencies": {
